assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@500&family=EB+Garamond&display=swap');

* {
    font-family: "EB Garamond", sans-serif;
    font-size: 16px;
    letter-spacing: 2px;
    padding: 0;
    margin: 0;
    box-sizing: border-box;
    color: #34454A;
    outline:solid 1px #f00 !important;
}

h2 {
    font-family: "Cormorant Garamond"sans-serif;
    font-size: 3rem;
    text-transform: uppercase;
    letter-spacing: 6px;
}

h3 {
    font-family: "Cormorant Garamond", sans-serif;
    font-size: 1.5rem;
    text-transform: uppercase;
    letter-spacing: 6px;
}

p {
    font-size: 1.3rem;
    line-height: 30px;
}

/* Main Menu and Logo*/

#menu-links {
    background-color: #597680;
    padding: 0 40px;
    display: grid;
    grid-template-columns: repeat(5, 1fr);
    grid-template-rows: 1fr;
    justify-items: center;
    align-items: center;
    text-transform: Uppercase;
}

#menu-links li {
    list-style-type: none;
    display: grid;
    grid-auto-columns: minmax(160px, auto);
    justify-items: center;
    align-items: center;
    width:100%;
    height:100%;
}

#menu-links a {
    color: #fcfcfc;
    text-decoration: none;
    text-align: center;
}

.logo {
    grid-column: 3/4;
    grid-row: 1;
}

#logo-image {
    height: 100%;
    width: 100%;
}

.active {
    background-color: #6c93a0;
}

.navbar-links:hover {
    background-color: #5e7f8a;
    transition: all 1s ease-in;
}

.navbar-links a:hover {
    transform: scale(1.1);
    transition: all 0.6s ease-in;
}

/* Page H1s excluding the homepage */

.page-h1 {
    font-family: "Cormorant Garamond", sans-serif;
    text-transform: uppercase;
    letter-spacing: 6px;
    font-size: 5rem;
    padding: 40px;
    text-align: center;
}

/* Page opening paragraph excluding homepage */

.page-opening-text p {
    font-size: 1.8rem;
    letter-spacing: 2px;
    padding: 80px 100px;
    background-color: #efefef;
    width: 100%;
    text-align: center;
    line-height: 1.5;
}

/* Footer section */

footer {
    background-color: #597680;
}

#footer-icons {
    display: grid;
    grid-template-columns: repeat(4, 1fr);
    justify-items: center;
    align-items: center;
    grid-column-gap: 1rem;
    height: 80px;
    padding: 10px;
}

#footer-icons li {
    list-style: none;
}

#footer-icons img {
    width: 100%;
    max-width: 50px;
}

#footer-icons img:hover {
    transform: scale(1.3);
    transition: all 0.3s ease-in-out;
}

/* Homepage styles start here */

/*hero image & text overlay*/

#hero-image-container {
    height: 600px;
    width: 100%;
    display: grid;
    grid-template-columns: 1fr;
    grid-template-rows: 1fr;
    justify-items: center;
    align-items: center;
}

#hero-image {
    background: url('../images/hero-image-home-page.jpg') no-repeat center top;
    background-size: cover;
    height: 600px;
    width: 100%;
    grid-column: 1;
    grid-row: 1;
}

#hero-image-text-overlay {
    background-color: rgba(255, 255, 255, .7);
    width: 60%;
    grid-column: 1;
    grid-row: 1;
    text-align: center;
    padding: 30px;
    line-height: 200%;
}

#hero-image-text-overlay h1 {
    font-family: "Cormorant Garamond", sans-serif;
    font-size: 1.8rem;
    text-transform: uppercase;
    letter-spacing: 4px;
}

#hero-image-text-overlay h2 {
    font-size: 1.2rem;
}

/* Blockquote Section */

#quote-section {
    display: grid;
    justify-content: center;
    align-content: center;
    width: 100%;
}

#quote-section blockquote {
    padding: 20px;
}

#blockquote,
#blockquote q {
    font-family: "Cormorant Garamond", sans-serif;
    font-style: italic;
    font-size: 2.5rem;
    line-height: 2.5rem;
    color: #34454A;
    text-align: center;
}

/*About section*/

#about-section {
    background-color: #efefef;
    width: 100%;
    display: grid;
    justify-content: center;
    align-items: center;
}

#about-me-image {
    background: url('../images/about-me-image.jpg') no-repeat center center;
    height: 300px;
    width: 300px;
    border-radius: 50%;
    border: 2px solid #fcfcfc
}

#about-container {
    display: grid;
    grid-template-columns: repeat(2, minmax(0, 1fr));
    grid-auto-rows: minmax(100px, auto);
    padding: 20px 0;
    justify-items: center;
    align-items: center;
}

.about-me-heading {
    grid-column: 1/3;
    border-bottom: 1px solid #fcfcfc;
}

.about-me-column-1 {
    grid-column: 1/2;
    padding: 0 40px;
    max-width: 500px;
}

.about-me-column-2 {
    grid-column: 2/4;
    max-width: 500px;
}

/* Stories section */

#stories-container {
    display: grid;
    width: 100%;
    grid-template-columns: repeat(3, 1fr);
    justify-items: center;
    align-items: center;
    grid-column-gap: 1rem;
    padding: 20px;
}

#stories-container h2 {
    margin-bottom: 20px;
    grid-column: 1/4;
    grid-row: 1/2;
}

.story-1-image {
    background: url('../images/story-image-1.jpg') no-repeat center center;
    height: 200px;
    width: 200px;
    border-radius: 50%;
    border: 2px solid #efefef;
    margin: 20px;
    align-self: baseline;
}

.story-2-image {
    background: url('../images/story-image-2.jpg') no-repeat center center;
    height: 200px;
    width: 200px;
    border-radius: 50%;
    border: 2px solid #efefef;
    margin: 20px;
    align-self: baseline;
}

.story-3-image {
    background: url('../images/story-image-3.jpg') no-repeat center center;
    height: 200px;
    width: 200px;
    border-radius: 50%;
    border: 2px solid #efefef;
    margin: 20px;
    align-self: baseline;
}

.story {
    display: grid;
    justify-items: center;
    align-items: center;
    background-color: #597680;
    height: 100%;
    padding: 20px;
}

.story-text {
    display: grid;
    justify-items: center;
    align-items: center;
    align-self: baseline;
}

.story h3 {
    color: #fcfcfc;
    margin-top: 20px;
    text-align: center;
    padding-bottom: 20px;
}
/* ... */

